hotfix: footer scss fixes
 - content not overlapping
 - even with pages with few content footer will stay at page bottom
 - improved mobile design (removed float from copyright)

--- a/web/css/base/_brain.scss
+++ b/web/css/base/_brain.scss
@@ -69,8 +69,7 @@ html {
 body {
   background: $default-background-color;
   font-family: 'Roboto', Arial, sans-serif;
-  min-height: 100%;
-  padding-top: 7rem;
+  height: 100%;
 }
 
 img {
